init on the way

--- a/src/app/components/init-home/init-home.component.html
+++ b/src/app/components/init-home/init-home.component.html
@@ -2,13 +2,19 @@
     <app-logo-image></app-logo-image>
 </div>
 
-<a>
-    <button>Log In</button>
-</a>
+<section>
+    
+    <a>
+        <button class="mdc-button mdc-button--raised">
+            <span class="mdc-button__label">LogIn</span>
+        </button>
+    </a>
 
-<a>
-    <p>or create an account</p>
-</a>
+    <a>
+        <p>or create an account</p>
+    </a>
+
+</section>
 
 <footer>
     <a><p>FAQs</p></a>
