--- a/src/app/components/init-home/init-home.component.html
+++ b/src/app/components/init-home/init-home.component.html
@@ -1,13 +1,14 @@
-<div id="logoSection">
+<div #logoSection>
     <app-logo-image></app-logo-image>
 </div>
 
 <section>
     
     <a>
-        <button class="mdc-button mdc-button--raised">
+        <!--<button class="mdc-button mdc-button--raised">
             <span class="mdc-button__label">LogIn</span>
-        </button>
+        </button>-->
+        <button mat-raised-button color="warn">Login</button>
     </a>
 
     <a>
