tratando de hacer andar material

--- a/src/app/components/login-page/login-form/login-form.component.html
+++ b/src/app/components/login-page/login-form/login-form.component.html
@@ -1,1 +1,6 @@
-<p>login-form works!</p>
+<form>
+  <mat-form-field appearance="outline">
+    <mat-label>Input</mat-label>
+    <input matInput>
+  </mat-form-field>
+</form>
