--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,36 @@
 $bb-primary-green:  #419400
+
+.bb-btn-primary
+  background: $bb-primary-green
+  color: white
+
+.bb-btn-basic
+  background: white
+  color: $bb-primary-green
+
+.bb-text-green
+  color: $bb-primary-green
+
+.bb-input-icon
+  color: $bb-primary-green
+  padding-right: 0.8rem
+
+.bb-w-100
+  width: 100%
+
+.bb-flex-center
+  display: flex
+  justify-content: center
+
+//input outline color
+:host ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline
+  color: black !important
+  opacity: 40% !important
+
+//outline color focused
+:host ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick
+  color: $bb-primary-green !important
+
+//input label color
+:host ::ng-deep .mat-form-field-label
+  color: $bb-primary-green !important
