--- a/src/app/components/signup-frame/signup-page/signup-page.component.html
+++ b/src/app/components/signup-frame/signup-page/signup-page.component.html
@@ -1,10 +1,24 @@
-<!--Here goes the stepper-->
+<mat-stepper>
+    <mat-step label="Information">
+        <div class="forms-body-container">
+            <app-signup-forms #signUpForm ></app-signup-forms>
+        </div>
+        <div class="next-button" (click)="pullFormData()">
+            <button mat-button matStepperNext>Next</button>
+        </div>
+    </mat-step>
+    <mat-step label="Validation">
+        <app-validation-from></app-validation-from>
+        <div class="next-button">
+            <button mat-button matStepperNext>Next</button>
+        </div>
+    </mat-step>
+    <mat-step label="Tos">
+        <app-tos #ToS_form></app-tos>
+        <div class="next-button" *ngIf="everythingIsOk">
+            <button mat-button matStepperNext>SignUp</button>
+        </div>
+    </mat-step>
+</mat-stepper>
 
-<div class="forms-body-container">
-    <app-signup-forms #signUpForm ></app-signup-forms>
-</div>
 
-
-<div class="next-button" (click)="pullFormData()">
-    <button mat-raised-button color="basic">Next</button>
-</div>
