--- a/src/app/components/signup-frame/signup-page/signup-page.component.sass
+++ b/src/app/components/signup-frame/signup-page/signup-page.component.sass
@@ -1,8 +1,12 @@
-.forms-body-container
+/*.forms-body-container
     margin-top: 15%
     margin-right: 5%
     margin-left: 5%
-    background: #D9D9D9
+    background: #D9D9D9*/
+
+.mat-stepper
+    margin: 0,0,0,0
+    background: white
 
 .next-button
     margin-right: 5%
