--- a/src/app/components/login-page/login-form/login-form.component.html
+++ b/src/app/components/login-page/login-form/login-form.component.html
@@ -1,24 +1,24 @@
-<form class="bb-login-form" [formGroup]="loginForm" (ngSubmit)="handleLoginSubmit($event)">
+<form class="bb-login-form" [formGroup]="loginForm" (ngSubmit)="handleLoginSubmit()">
   <div class="row">
     <div class="col bb-flex-center bb-text-green bb-login-text">
       Log in
     </div>
     <div class="col bb-flex-center">
-      <mat-form-field appearance="outline" class="bb-form-field bb-w-100">
+      <mat-form-field class="bb-form-field bb-w-100" appearance="outline" [hideRequiredMarker]="true">
         <mat-icon class="bb-input-icon" matPrefix>person</mat-icon>
         <mat-label class="bb-login-field">Username</mat-label>
         <input matInput [formControl]="loginForm.controls.username">
       </mat-form-field>
     </div>
     <div class="col bb-flex-center">
-      <mat-form-field appearance="outline" class="bb-form-field bb-w-100">
+      <mat-form-field class="bb-form-field bb-w-100" appearance="outline" [hideRequiredMarker]="true">
         <mat-icon class="bb-input-icon" matPrefix>lock</mat-icon>
         <mat-label class="bb-login-field">Password</mat-label>
         <input matInput type="password" [formControl]="loginForm.controls.password">
       </mat-form-field>
     </div>
     <div class="col bb-flex-center">
-      <div class="row bb-w-100">
+      <div class="bb-w-100">
         <button mat-raised-button class="bb-btn-primary bb-login-button">Log In</button>
         <p class="bb-login-forgot-password-text">
           <a class="bb-login-forgot-password-link" routerLink="">Forgot password?</a>
