--- a/src/app/components/init-page/login-form/login-form.component.sass
+++ b/src/app/components/init-page/login-form/login-form.component.sass
@@ -12,20 +12,14 @@
 
 .bb-login-button
   width: 100%
-  height: 3rem
+  height: 3.4rem
+  font-family: 'Montserrat'
   font-size: 1.2rem
   font-weight: lighter
   margin-top: 1.1rem
 
 .bb-login-forgot-password-text
-  margin-top: 0.6rem
+  margin-top: 0.8rem !important
   text-align: right
   font-size: 1rem
   font-weight: 500
-
-.bb-login-forgot-password-link
-  text-decoration: none
-  color: black
-
-  &:visited
-    text-decoration: none
