--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,17 @@
 $bb-primary-green:  #419400
 $bb-primary-dark-green: #357a00
 
+// fonts
+@font-face
+  font-family: "Montserrat"
+  src: local("Montserrat"), url(./assets/fonts/Montserrat/static/Montserrat-Regular.ttf) format("truetype")
+
+@font-face
+  font-family: "DM Sans"
+  src: local("DM Sans"), url(./assets/fonts/DM_Sans/DMSans-Regular.ttf) format("truetype")
+
+
+// bb classes
 .bb-btn-primary
   background: $bb-primary-green
   color: white
@@ -15,8 +26,10 @@ $bb-primary-dark-green: #357a00
 .bb-text-green
   color: $bb-primary-green
 
-.bb-input-icon
+.bb-icon
   color: $bb-primary-dark-green
+
+.bb-input-icon
   padding-right: 0.8rem
 
 .bb-w-100
@@ -26,6 +39,14 @@ $bb-primary-dark-green: #357a00
   display: flex
   justify-content: center
 
+.bb-link-text
+  font-family: 'DM Sans'
+  font-weight: 700
+  text-decoration: none
+  color: black
+
+  &:visited
+    text-decoration: none
 
 // Material form field overrides
 // default
@@ -60,5 +81,5 @@ $bb-primary-dark-green: #357a00
   .mat-form-field-outline
     color: red
 
-  .bb-input-icon
+  .bb-icon
     color: red
