Password reset almost complete

--- a/src/app/components/init-page/login-form/login-form.component.html
+++ b/src/app/components/init-page/login-form/login-form.component.html
@@ -1,25 +1,31 @@
-<form class="bb-login-form" [formGroup]="loginForm" (ngSubmit)="handleLoginSubmit()">
+<form class="bb-init-form" [formGroup]="loginForm" (ngSubmit)="handleLoginSubmit()">
   <div class="row">
-    <div class="col bb-flex-center bb-text-green bb-login-text">
+    <div class="bb-flex-center bb-text-green bb-init-top-text">
       Log in
     </div>
-    <div class="col bb-flex-center">
-      <mat-form-field class="bb-form-field bb-w-100" appearance="outline" [hideRequiredMarker]="true">
+    <div class="bb-flex-center">
+      <mat-form-field class="bb-w-100" appearance="outline">
         <mat-icon class="bb-icon bb-input-icon" matPrefix>person</mat-icon>
-        <mat-label class="bb-login-field">Username</mat-label>
+        <mat-label>Username</mat-label>
         <input matInput [formControl]="loginForm.controls.username">
+        <mat-error *ngIf="loginForm.controls.username.invalid">
+          Username must have 4 characters or more
+        </mat-error>
       </mat-form-field>
     </div>
-    <div class="col bb-flex-center">
-      <mat-form-field class="bb-form-field bb-w-100" appearance="outline" [hideRequiredMarker]="true">
+    <div class="bb-flex-center">
+      <mat-form-field class="bb-w-100" appearance="outline">
         <mat-icon class="bb-icon bb-input-icon" matPrefix>lock</mat-icon>
-        <mat-label class="bb-login-field">Password</mat-label>
+        <mat-label>Password</mat-label>
         <input matInput type="password" [formControl]="loginForm.controls.password">
+        <mat-error *ngIf="loginForm.controls.password.invalid">
+          Password must have 8 characters or more
+        </mat-error>
       </mat-form-field>
     </div>
-    <div class="col bb-flex-center">
+    <div class="bb-flex-center bb-submit-button-margin">
       <div class="bb-w-100">
-        <button mat-raised-button class="bb-btn-primary bb-login-button">LOG IN</button>
+        <button mat-raised-button class="bb-btn-primary bb-init-submit-button">LOG IN</button>
         <p class="bb-login-forgot-password-text">
           <a class="bb-link-text"
             routerLink="/init/resetPassword"
