--- a/src/styles.sass
+++ b/src/styles.sass
@@ -56,7 +56,6 @@ $bb-primary-dark-green: #357a00
 
   .mat-form-field-outline
     color: black
-    opacity: 80%
 
   .mat-form-field-required-marker
     color: red
@@ -83,3 +82,14 @@ $bb-primary-dark-green: #357a00
 
   .bb-icon
     color: red
+
+.mat-form-field.mat-form-field-disabled
+  .mat-form-field-outline
+    color: gray
+
+  .mat-form-field-label
+    color: gray
+
+  .bb-icon
+    color: gray
+
