--- a/src/app/components/init-page/init-home/init-home.component.sass
+++ b/src/app/components/init-page/init-home/init-home.component.sass
@@ -19,7 +19,7 @@
   margin-top: 0.9rem
 
 .bb-faq-footer
-  height: 6rem
+  background-color: rgb(255,255,255, 80%)//linear-gradient(.5turn, rgb(255,255,255, 100%), )
   width: 100%
 
   position: absolute
@@ -27,12 +27,11 @@
   left: 0
 
   font-family: 'DM Sans'
-  font-size: 1.2rem
+  font-size: 1rem
   text-align: center
 
 .bb-faq-icon
-  font-size: 3.3rem
+  font-size: 3rem
 
   width: 100%
   height: 100%
-  margin-top: 0.7rem
