--- a/src/app/components/init-page/login-form/login-form.component.sass
+++ b/src/app/components/init-page/login-form/login-form.component.sass
@@ -1,22 +1,4 @@
-@use "../../../../styles"
-
-.bb-login-form
-  width: 100%
-  height: 100%
-
-.bb-login-text
-  margin-top: 0.8rem
-  margin-bottom: 1rem
-  font-size: 1.2rem
-  font-weight: lighter
-
-.bb-login-button
-  width: 100%
-  height: 3.4rem
-  font-family: 'Montserrat'
-  font-size: 1.2rem
-  font-weight: lighter
-  margin-top: 1.1rem
+@use "../init-page"
 
 .bb-login-forgot-password-text
   margin-top: 0.8rem !important
