password reset almost done

--- a/src/app/components/init-page/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/init-page/reset-password-form/reset-password-form.component.html
@@ -1,7 +1,9 @@
-<form class="bb-init-form" [formGroup]="resetPasswordForm" (ngSubmit)="handlePasswordRecovery()">
+<form class="bb-init-form" (submit)="handlePasswordRecovery($event)">
+
   <div class="bb-flex-center bb-text-green bb-init-top-text">
     Password Recovery
   </div>
+
   <div class="bb-flex-center">
     <mat-form-field class="bb-w-100" appearance="outline">
       <mat-icon class="bb-icon bb-input-icon" matPrefix>person</mat-icon>
@@ -12,6 +14,7 @@
       </mat-error>
     </mat-form-field>
   </div>
+
   <div class="bb-flex-center">
     <mat-form-field class="bb-w-100" appearance="outline">
       <mat-icon class="bb-icon bb-input-icon" matPrefix>key</mat-icon>
@@ -19,18 +22,22 @@
       <input matInput
         [formControl]="recoveryCodeControl"
       >
+      <mat-error *ngIf="recoveryCodeControl.invalid">
+        Recovery Code must have 6 characters
+      </mat-error>
     </mat-form-field>
   </div>
+
   <div class="bb-flex-center bb-submit-button-margin">
     <div class="bb-w-100">
-      <button
-        *ngIf="recoveryCodeControl.disabled"
-        mat-raised-button class="bb-btn-primary bb-init-submit-button"
+      <button mat-raised-button *ngIf="recoveryCodeControl.disabled"
+        class="bb-btn-primary bb-init-submit-button"
       >SEND RECOVERY CODE</button>
-      <button
-        *ngIf="!recoveryCodeControl.disabled"
-        mat-raised-button class="bb-btn-primary bb-init-submit-button"
+
+      <button mat-raised-button *ngIf="!recoveryCodeControl.disabled"
+        class="bb-btn-primary bb-init-submit-button"
       >RESET PASSWORD</button>
     </div>
   </div>
+
 </form>
