--- a/src/app/components/signup-frame/signup-page/signup-page.component.sass
+++ b/src/app/components/signup-frame/signup-page/signup-page.component.sass
@@ -15,3 +15,20 @@
 button
     width: 100%
     background: #419400
+
+::ng-deep .mat-step-header .mat-step-icon-selected
+    background-color: #419400
+
+::ng-deep .mat-horizontal-content-container
+    background-color: white
+
+/*::ng-deep .mat-horizontal-stepper-header-container
+    background-color: white*/
+
+
+::ng-deep .mat-step-text-label
+    color: black
+
+/*::ng-deep .mat-stepper-horizontal-line
+    background-color: black*/
+
