--- a/src/app/components/signup-frame/signup-forms/signup-forms.component.html
+++ b/src/app/components/signup-frame/signup-forms/signup-forms.component.html
@@ -18,7 +18,7 @@
     <!--Password-->
     <mat-form-field appearance="outline">
         <mat-icon matPrefix>lock</mat-icon>
-        <mat-label>Enter your password</mat-label>
+        <mat-label>Password</mat-label>
         <input matInput [type]="hide ? 'password' : 'text'" [formControl]="signUpForm.controls.password">
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -29,18 +29,37 @@
     <!--Age and gender-->
     <div class="two-col">
         <div class="left">
+            <!--
             <mat-form-field appearance="outline">
                 <mat-label>Age</mat-label>
-                <input matInput placeholder="Age" [formControl]="signUpForm.controls.birthdate">
+                <input type = "date" matInput  placeholder="Age" [formControl]="signUpForm.controls.birthdate" >
                 <mat-icon matPrefix>event</mat-icon>
+                <mat-error *ngIf="signUpForm.controls.birthdate.invalid">{{errorMessage()}}</mat-error>
+            </mat-form-field>
+            -->
+            <mat-form-field appearance="outline">
+                <mat-label>Birthdate</mat-label>
+                <input matInput [matDatepicker]="picker" type="date" [formControl]="signUpForm.controls.birthdate">
+                <mat-datepicker-toggle matPrefix [for]="picker">calendar</mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
                 <mat-error *ngIf="signUpForm.controls.birthdate.invalid">{{errorMessage()}}</mat-error>
             </mat-form-field>
         </div>
         <div class="right">
+        <!--
         <mat-form-field appearance="outline">
             <mat-label>Gender</mat-label>
             <input matInput placeholder="Gender" [formControl]="signUpForm.controls.gender">
             <mat-error *ngIf="signUpForm.controls.gender.invalid">{{errorMessage()}}</mat-error>
+        </mat-form-field>
+        -->
+        <mat-form-field appearance="outline">
+            <mat-label>Gender</mat-label>
+            <mat-select [formControl]="signUpForm.controls.gender">
+                <mat-option value="Woman">Woman</mat-option>
+                <mat-option value="Man">Man</mat-option>
+                <mat-option value="Non-binary">Non-binary</mat-option>
+            </mat-select>
         </mat-form-field>
         </div>
     </div>
