Completada recuperacion de password

--- a/src/app/components/init-page/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/init-page/reset-password-form/reset-password-form.component.html
@@ -1,28 +1,30 @@
-<form class="bb-init-form" (submit)="handlePasswordRecovery($event)">
+<form class="bb-init-form"
+  [formGroup]="passwordRecoveryForm"
+  (ngSubmit)="handlePasswordRecovery()">
 
   <div class="bb-flex-center bb-text-green bb-init-top-text">
     Password Recovery
   </div>
 
   <div class="bb-flex-center">
-    <mat-form-field class="bb-w-100" appearance="outline">
+    <mat-form-field class="bb-w-100" appearance="outline" [hideRequiredMarker]="true">
       <mat-icon class="bb-icon bb-input-icon" matPrefix>person</mat-icon>
       <mat-label>Username</mat-label>
       <input matInput [formControl]="usernameControl" (input)="resetFormOnUserChange()">
-      <mat-error *ngIf="usernameControl.invalid">
+      <mat-error>
         Username must have 4 characters or more
       </mat-error>
     </mat-form-field>
   </div>
 
   <div class="bb-flex-center">
-    <mat-form-field class="bb-w-100" appearance="outline">
+    <mat-form-field class="bb-w-100" appearance="outline" [hideRequiredMarker]="true">
       <mat-icon class="bb-icon bb-input-icon" matPrefix>key</mat-icon>
       <mat-label>Recovery Code</mat-label>
       <input matInput
         [formControl]="recoveryCodeControl"
       >
-      <mat-error *ngIf="recoveryCodeControl.invalid">
+      <mat-error>
         Recovery Code must have 6 characters
       </mat-error>
     </mat-form-field>
