Added bb-theme and config

--- a/src/app/components/init-page/init-home/init-home.component.html
+++ b/src/app/components/init-page/init-home/init-home.component.html
@@ -3,7 +3,7 @@
     BONDI BONDING
   </p>
   <a routerLink="/init/login">
-      <button mat-raised-button class="bb-btn-primary bb-login-btn">
+      <button mat-raised-button class="bb-login-btn" color="primary">
         Log in
       </button>
   </a>
@@ -20,6 +20,6 @@
     <div class="bb-faq-text">
       FAQs
     </div>
-    <mat-icon class="bb-icon bb-faq-icon">expand_more</mat-icon>
+    <mat-icon class="bb-faq-icon" color="primary">expand_more</mat-icon>
   </a>
 </footer>
