--- a/src/app/components/init-page/update-password-form/update-password-form.component.html
+++ b/src/app/components/init-page/update-password-form/update-password-form.component.html
@@ -8,7 +8,7 @@
 
   <div class="bb-flex-center">
     <mat-form-field class="bb-w-100" appearance="outline" [hideRequiredMarker]="true">
-      <mat-icon class="bb-icon bb-input-icon" matPrefix>lock</mat-icon>
+      <mat-icon matPrefix class="bb-icon bb-input-icon" color="primary">lock</mat-icon>
       <mat-label>New Password</mat-label>
       <input matInput
         [formControl]="newPasswordControl"
@@ -22,7 +22,7 @@
 
   <div class="bb-flex-center bb-submit-button-margin">
     <div class="bb-w-100">
-      <button mat-raised-button class="bb-btn-primary bb-init-submit-button">
+      <button mat-raised-button class="bb-init-submit-button" color="primary">
         UPDATE PASSWORD
       </button>
     </div>
