--- a/src/app/components/init-page/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/init-page/reset-password-form/reset-password-form.component.html
@@ -8,7 +8,7 @@
 
   <div class="bb-flex-center">
     <mat-form-field class="bb-w-100" appearance="outline" [hideRequiredMarker]="true">
-      <mat-icon class="bb-icon bb-input-icon" matPrefix>person</mat-icon>
+      <mat-icon matPrefix class="bb-input-icon" color="primary">person</mat-icon>
       <mat-label>Username</mat-label>
       <input matInput [formControl]="usernameControl" (input)="resetFormOnUserChange()">
       <mat-error>
@@ -19,7 +19,7 @@
 
   <div class="bb-flex-center">
     <mat-form-field class="bb-w-100" appearance="outline" [hideRequiredMarker]="true">
-      <mat-icon class="bb-icon bb-input-icon" matPrefix>key</mat-icon>
+      <mat-icon matPrefix class="bb-input-icon" color="primary">key</mat-icon>
       <mat-label>Recovery Code</mat-label>
       <input matInput
         [formControl]="recoveryCodeControl"
@@ -33,11 +33,13 @@
   <div class="bb-flex-center bb-submit-button-margin">
     <div class="bb-w-100">
       <button mat-raised-button *ngIf="recoveryCodeControl.disabled"
-        class="bb-btn-primary bb-init-submit-button"
+        class="bb-init-submit-button"
+        color="primary"
       >SEND RECOVERY CODE</button>
 
       <button mat-raised-button *ngIf="!recoveryCodeControl.disabled"
-        class="bb-btn-primary bb-init-submit-button"
+        class="bb-init-submit-button"
+        color="primary"
       >RESET PASSWORD</button>
     </div>
   </div>
