--- a/src/app/components/init-page/update-password-form/password-updated-dialog/password-updated-dialog.component.html
+++ b/src/app/components/init-page/update-password-form/password-updated-dialog/password-updated-dialog.component.html
@@ -8,5 +8,5 @@
   </p>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
+  <button mat-raised-button [mat-dialog-close]="true" cdkFocusInitial color="primary">Ok</button>
 </mat-dialog-actions>
