Created BusStop component and interfaces, fixed Reset Pswd form

--- a/src/app/components/init-page/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/init-page/reset-password-form/reset-password-form.component.html
@@ -19,7 +19,7 @@
 
   <div class="bb-flex-center">
     <mat-form-field class="bb-w-100" appearance="outline" [hideRequiredMarker]="true">
-      <mat-icon matPrefix class="bb-input-icon" color="primary">key</mat-icon>
+      <mat-icon matPrefix class="bb-input-icon {{disabledIconClass}}" color="primary">key</mat-icon>
       <mat-label>Recovery Code</mat-label>
       <input matInput
         [formControl]="recoveryCodeControl"
