--- a/src/styles.sass
+++ b/src/styles.sass
@@ -18,6 +18,9 @@ $bb-primary-dark-green: #357a00
 .bb-input-icon
   padding-right: 0.8rem
 
+  &.bb-disabled
+    color: gray
+
 .bb-w-100
   width: 100%
 
