--- a/src/app/components/general/navbar/navbar.component.sass
+++ b/src/app/components/general/navbar/navbar.component.sass
@@ -1,2 +1,3 @@
-::ng-deep .mat-tab-header
-    border-bottom: transparent
+.bb-navbar
+  // TODO: Alinear para abajo del todo de la pantalla en todo momento.
+  // Asegurarse que no haga cosas raras con el contenido si es largo (capaz que queda por detras de la navbar)
