--- a/src/app/components/general/search/search-form/search-form.component.sass
+++ b/src/app/components/general/search/search-form/search-form.component.sass
@@ -1,4 +1,5 @@
 @use '../../../../../styles'
+@use '../search.component'
 
 .bb-search-form
   text-align: center
@@ -8,14 +9,6 @@
 .bb-search-form-field
   font-family: 'Montserrat'
   width: 95%
-
-.bb-search-form-btn
-  font-family: 'Montserrat'
-  width: 95%
-  height: 3rem
-
-.bb-filter-btn
-  color: styles.$bb-primary-green
 
 .bb-bond-btn
   font-weight: bold
