--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,5 @@
+@use 'mdb-angular-ui-kit/assets/scss/mdb.scss'
+
 $bb-primary-green:  #419400
 $bb-primary-dark-green: #357a00
 
@@ -39,3 +41,7 @@ $bb-primary-dark-green: #357a00
 
 .bb-btn
   font-family: 'Montserrat'
+
+.bb-grid-form-field
+  width: 100%
+  height: 100%
