--- a/src/app/components/general/navbar/navbar.component.sass
+++ b/src/app/components/general/navbar/navbar.component.sass
@@ -1,8 +1,16 @@
-.bb-navbar
+/*.bb-navbar
   // TODO: Alinear para abajo del todo de la pantalla en todo momento.
   // Asegurarse que no haga cosas raras con el contenido si es largo (capaz que queda por detras de la navbar)
   width: 100%
   position: fixed
   bottom: 0 
-  z-index: 1000
+  z-index: 1000*/
+
+.bb-navbar .row
+  display: flex
+  align-items: center
+  justify-content: center
+
+.row .col
+  padding: 10%
 
