--- a/src/app/components/general/navbar/navbar.component.html
+++ b/src/app/components/general/navbar/navbar.component.html
@@ -1,20 +1,20 @@
-<mat-toolbar class="bb-navbar">
+<mat-toolbar class="bb-navbar" style="background-color:white;">
+  <mat-divider style="border-top-color:black;"></mat-divider>
   <mat-toolbar-row class="row">
       <div class="col">
         <a routerLink="/home">
-          <mat-icon>directions_bus</mat-icon>
+          <mat-icon color="primary">directions_bus</mat-icon>
         </a>
       </div>
       <div class="col">
         <a routerLink="/chat">
-          <mat-icon>chat</mat-icon>
+          <mat-icon color="primary" matBadge="2" matBadgeColor="warn" [matBadgeHidden]="hidden">chat</mat-icon>
         </a>
       </div>
       <div class="col">
         <a routerLink="/profile">
-          <mat-icon>person</mat-icon>
+          <mat-icon color="primary">person</mat-icon>
         </a>
       </div>
   </mat-toolbar-row>
-  
 </mat-toolbar>
