--- a/src/app/components/chat-page/speech-bubble/speech-bubble.component.sass
+++ b/src/app/components/chat-page/speech-bubble/speech-bubble.component.sass
@@ -1,13 +1,26 @@
 .speech-bubble 
-    width: 100%
+    width: 75%
     margin: 50px auto
     border-radius: 15px
     background: #4d9f0f
-    color: #fff
     padding: 20px
-    text-align: center
-    font-weight: 900
-    font-family: arial
+    font-family: 'DM Sans'
+    font-weight: 700
+    text-decoration: none
+    color: whitesmoke
+    position: relative
+
+.sender
+    width: 75%
+    margin: 50px auto
+    border-radius: 15px
+    background: #E8E8E8
+    color: black
+    padding: 20px
+    font-family: 'DM Sans'
+    font-weight: 700
+    text-decoration: none
+    color: black
     position: relative
 
 .user:before
@@ -28,8 +41,8 @@
     height: 0px
     position: absolute
     border-left: 15px solid transparent
-    border-right: 15px solid #4d9f0f
-    border-top: 15px solid #4d9f0f
+    border-right: 15px solid #E8E8E8
+    border-top: 15px solid #E8E8E8
     border-bottom: 15px solid transparent
     left: -16px
     top: 0px
