completed most of the search functionality

--- a/src/app/components/general/search/search-filters-modal/search-filters-modal.component.html
+++ b/src/app/components/general/search/search-filters-modal/search-filters-modal.component.html
@@ -1,6 +1,7 @@
 <button
-    mat-stroked-button
-    class="bb-search-form-btn bb-filter-btn"
-    (click)="openFiltersDialog()">
+  type="button"
+  mat-stroked-button
+  class="bb-search-form-btn bb-filter-btn"
+  (click)="openFiltersDialog()">
     FILTERS
 </button>
