--- a/src/app/components/general/search/search-filters-modal-content/search-filters-modal-content.component.html
+++ b/src/app/components/general/search/search-filters-modal-content/search-filters-modal-content.component.html
@@ -1,8 +1,8 @@
 <h2 mat-dialog-title>Filters</h2>
 
 <mat-dialog-content class="mat-typography">
-  <app-search-filters-form #filtersForm
-    (searchFiltersSubmit)="handleSearchFiltersSubmit($event)"></app-search-filters-form>
+  <app-trip-filters-form #filtersForm
+    (tripFiltersSubmit)="handleSearchFiltersSubmit($event)"></app-trip-filters-form>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
