no more style in html

--- a/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
+++ b/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="bb-chat-feed-header">
-    <mat-toolbar-row style="display:flex; justify-content: space-between;">
-      <a routerLink="/chat" style="color:inherit" *ngIf="showIcons">
+    <mat-toolbar-row class="bb-feed-header">
+      <a routerLink="/chat" *ngIf="showIcons">
         <button mat-icon-button>
           <mat-icon>arrow_back</mat-icon>
         </button>
