--- a/src/app/components/chat-page/chat-view/chat-view.component.sass
+++ b/src/app/components/chat-page/chat-view/chat-view.component.sass
@@ -3,5 +3,11 @@
     top:0
     z-index: 9999
 
+.app-chat-feed-input
+    width: 100%
+    position: fixed
+    bottom: 0 
+    z-index: 1000
+
 section
     position: relative
