--- a/src/app/components/chat-page/chat-view/chat-view.component.html
+++ b/src/app/components/chat-page/chat-view/chat-view.component.html
@@ -1,5 +1,5 @@
 <!--mobile-->
-<div *ngIf="(isMobile | async)?.matches">
+<div >
     <div class="app-chat-feed-header">
         <app-chat-feed-header></app-chat-feed-header>
     </div>
@@ -7,22 +7,8 @@
     <section>
         <app-chat-feed></app-chat-feed>
     </section>
-
-    <app-chat-feed-input></app-chat-feed-input>
-</div>
-
-<!--desktop-->
-<div *ngIf="!(isMobile | async)?.matches" style="display:flex; width:100%">
-    <div class="bb-chats-list" style="width:25% ; background-color: aqua;">
-        <p>lista de chats</p>
-    </div>
-    <div style="width:75%; overflow-y:hidden; ">
-        <div>
-            <app-chat-feed-header></app-chat-feed-header>
-        </div>
     
-        <section style="overflow-y: scroll;">
-            <app-chat-feed></app-chat-feed>
-        </section>
+    <div class="app-chat-feed-input">
+        <app-chat-feed-input></app-chat-feed-input>
     </div>
 </div>
