added local ssl and map

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,5 @@
 @use 'mdb-angular-ui-kit/assets/scss/mdb.scss'
+@use 'node_modules/maplibre-gl/dist/maplibre-gl.css'
 
 $bb-primary-green:  #419400
 $bb-primary-dark-green: #357a00
@@ -45,3 +46,4 @@ $bb-primary-dark-green: #357a00
 .bb-grid-form-field
   width: 100%
   height: 100%
+
