--- a/src/app/components/general/stop-map/bus-stop/bus-stop.component.sass
+++ b/src/app/components/general/stop-map/bus-stop/bus-stop.component.sass
@@ -1,11 +1,18 @@
-.bb-stop
-  background-color: white
-  border-radius: 1
 
+.bb-stop
   width: 100%
   height: 100%
 
   font-size: 1.5rem
 
+  background-color: white
+  border-color: white
+  border-width: 2px
+  border-style: solid
+  border-radius: 50%
+
+  transition: all .2s ease-out
+
   &.bb-selected-stop
-    font-size: 3rem
+    transform: scale(1.7)
+    box-shadow: 0 .3rem .5rem rgba(0, 0, 0, 0.3)
